--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,9 @@
   flex-direction: row;
   align-items: center;
 }
+.image-zoom {
+  transition: transform 0.5s ease;
+}
 nav {
   background-color: rgb(123, 153, 160);
   display: flex;
@@ -23,8 +26,6 @@ nav {
   font-size: 20px;
   gap: 1vw;
   padding-left: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .title img {
   border-radius: 50%;
@@ -39,9 +40,10 @@ nav {
 .search img {
   height: 14px;
   width: 14px;
+  margin-left: 11px;
 }
 .search {
-  width: 25%;
+  width: 23%;
   background-color: white;
   display: flex;
   flex-direction: row;
@@ -64,9 +66,71 @@ nav {
   list-style: none;
   display: flex;
   flex-direction: row;
-  gap: 7vw;
+  gap: 6vw;
 }
-ul li:hover {
-  font-size: 20px;
+ul li a {
+  text-decoration: none;
+  color: black;
+}
+ul li a:hover {
+  font-size: 14px;
   color: azure;
+}
+.text {
+  display: flex;
+  flex-direction: column;
+  gap: 2vw;
+  padding: 90px 90px;
+}
+#littleH1 {
+  border-radius: 15px;
+  width: 12vw;
+  height: 3.5vh;
+  color: brown;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#littleH1 img {
+  width: 13px;
+  height: 13px;
+  border-radius: 10px;
+  margin-left: 7px;
+}
+.text h1 {
+  font-size: 35px;
+  flex-direction: row;
+  color: rgba(0, 0, 71, 0.815);
+}
+.text h1 img {
+  height: 32px;
+  width: 32px;
+}
+.text .planning {
+  font-size: 17px;
+  width: 10vw;
+  height: 5vh;
+  margin-left: 70px;
+}
+.planning {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: brown;
+  background-color: rgb(116, 179, 200);
+  border-radius: 15px;
+}
+.planning img {
+  width: 15px;
+  height: 15px;
+  margin-left: 7px;
+}
+.planning:hover {
+  transform: scale(1.1);
 }
