--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,15 @@ ul li a:hover {
   font-size: 14px;
   color: azure;
 }
-.text {
+#heroSection {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  top: 11.5vh;
+}
+.text,
+.text2 {
   display: flex;
   flex-direction: column;
   gap: 2vw;
@@ -133,4 +141,12 @@ ul li a:hover {
 }
 .planning:hover {
   transform: scale(1.1);
+}
+.service {
+  gap: 1vw;
+  padding-left: 10px;
+}
+.service img {
+  width: 20px;
+  height: 20px;
 }
