--- a/assets/style.css
+++ b/assets/style.css
@@ -81,7 +81,14 @@ ul li a:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  z-index: -2;
   top: 11.5vh;
+  overflow: hidden;
+  width: 100%;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-image: url("Landscape/boat-8614314_1280.png");
+  background-size: cover;
 }
 .text,
 .text2 {
@@ -131,7 +138,7 @@ ul li a:hover {
   justify-content: center;
   align-items: center;
   color: brown;
-  background-color: rgb(116, 179, 200);
+  background-color: rgb(163, 188, 197);
   border-radius: 15px;
 }
 .planning img {
@@ -149,4 +156,19 @@ ul li a:hover {
 .service img {
   width: 20px;
   height: 20px;
+}
+.client {
+  gap: 1vw;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+.client img {
+  border-radius: 50%;
+  object-fit: cover;
+  width: 45px;
+  height: 45px;
+}
+.commentaire img {
+  width: 15px;
+  height: 15px;
 }
