--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+main {
+  display: flex;
+  flex-direction: column;
+  /* gap: 5.7vw; */
+}
+.colum {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .row {
   display: flex;
   flex-direction: row;
@@ -20,7 +30,7 @@ nav {
   align-items: center;
   overflow: hidden;
   position: fixed;
-  width: 100%;
+  width: 100vw;
 }
 .title {
   font-size: 20px;
@@ -85,9 +95,9 @@ ul li a:hover {
   top: 11.5vh;
   overflow: hidden;
   width: 100%;
-  height: 500px;
-  background-repeat: no-repeat;
-  background-image: url("Landscape/boat-8614314_1280.png");
+  height: 90vh;
+  background-repeat: repeat;
+  background-image: url("../Landscape/boat-8614314_1280.png");
   background-size: cover;
 }
 .text,
@@ -95,7 +105,7 @@ ul li a:hover {
   display: flex;
   flex-direction: column;
   gap: 2vw;
-  padding: 90px 90px;
+  padding: 75px 75px;
 }
 #littleH1 {
   border-radius: 15px;
@@ -124,34 +134,39 @@ ul li a:hover {
   height: 32px;
   width: 32px;
 }
-.text .planning {
-  font-size: 17px;
-  width: 10vw;
-  height: 5vh;
-  margin-left: 70px;
-}
 .planning {
   border: none;
+  font-size: 15px;
+  width: 8vw;
+  height: 5vh;
+  margin-left: 80px;
   outline: none;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   color: brown;
-  background-color: rgb(163, 188, 197);
   border-radius: 15px;
 }
 .planning img {
-  width: 15px;
-  height: 15px;
-  margin-left: 7px;
+  width: 12px;
+  height: 12x;
+  margin-left: 3px;
 }
 .planning:hover {
   transform: scale(1.1);
 }
+.milieu {
+  height: 350px;
+  width: 350px;
+  margin-top: 60px;
+}
 .service {
   gap: 1vw;
   padding-left: 10px;
+}
+.text2 h3 {
+  color: rgba(0, 0, 71, 0.815);
 }
 .service img {
   width: 20px;
@@ -196,6 +211,10 @@ ul li a:hover {
   padding: 33px 23px;
   border: 2px solid green;
 }
+
+/* .indication P {
+  margin-left: 10px;
+} */
 .plane {
   height: 30px;
   width: 30px;
@@ -223,8 +242,6 @@ ul li a:hover {
   height: 65vh;
   width: 19vw;
   border-radius: 10px;
-  /* margin-top: 30px; */
-  /* background-image: url("Landscape/canyon-2178786_1280.jpg"); */
 }
 .place2 {
   margin-top: 15px;
@@ -261,4 +278,28 @@ ul li a:hover {
 .place img {
   width: 17px;
   height: 17px;
+}
+#journal {
+  display: flex;
+  flex-direction: column;
+  gap: 2vw;
+  height: 100vh;
+}
+
+.yosemite img {
+  border: 1px solid black;
+  width: 450px;
+  height: 350px;
+  margin-left: 10px;
+}
+.yosemite span {
+  margin-left: 35px;
+}
+.francisco img {
+  border: 1px solid black;
+  width: 450px;
+  height: 350px;
+}
+.francisco span {
+  margin-left: 45px;
 }
