--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ main {
 nav {
   background-color: rgb(123, 153, 160);
   display: flex;
-  z-index: -1;
+  z-index: 1;
   flex-direction: row;
   justify-content: space-between;
   padding: 1vh 2vw;
@@ -135,21 +135,28 @@ ul li a:hover {
   height: 90vh;
   background-repeat: repeat;
   background-image: url("../Landscape/boat-8614314_1280.png");
+  background-color: rgba(248, 247, 216, 0.7);
   background-size: cover;
 }
 @media screen and (max-width: 500px) {
   #heroSection {
     flex-direction: column;
     top: 0;
-    height: 150vh;
+    height: 160vh;
   }
 }
-.text,
-.text2 {
+.text {
   display: flex;
   flex-direction: column;
   gap: 2vw;
   padding: 70px 87px;
+}
+.text2 {
+  color: rgba(0, 0, 71, 0.815);
+  display: flex;
+  flex-direction: column;
+  gap: 2vw;
+  padding: 70px 50px;
 }
 #littleH1 {
   border-radius: 15px;
@@ -200,6 +207,11 @@ ul li a:hover {
 .planning:hover {
   transform: scale(1.1);
 }
+.milieu img {
+  height: 420px;
+  width: 420px;
+  margin-top: 30px;
+}
 @media screen and (max-width: 500px) {
   .text {
     gap: 2vw;
@@ -233,25 +245,31 @@ ul li a:hover {
     height: 10px;
   }
   .text2 {
-    display: none;
+    gap: 1vw;
+    padding: 30px 55px;
+    color: #bfbff1;
   }
-}
-.milieu {
-  height: 350px;
-  width: 350px;
-  margin-top: 60px;
+  .milieu img {
+    height: 250px;
+    width: 250px;
+    margin-top: 1px;
+  }
 }
 .service {
   gap: 1vw;
   padding-left: 10px;
 }
+.service p,
+.commentaire p {
+  color: rgba(0, 0, 71, 0.815);
+}
 .service img {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
 .client {
   gap: 1vw;
-  padding-top: 20px;
+  padding-top: 50px;
   padding-left: 10px;
 }
 .client img {
@@ -259,6 +277,9 @@ ul li a:hover {
   object-fit: cover;
   width: 45px;
   height: 45px;
+}
+.srvice p {
+  font-size: 12px;
 }
 .commentaire img {
   width: 15px;
@@ -269,11 +290,16 @@ ul li a:hover {
   flex-direction: row;
   z-index: -2;
   overflow: hidden;
-  position: relative;
+  /* position: relative; */
   justify-content: space-evenly;
   height: 90vh;
   margin-top: 5.7vw;
   background-color: rgba(0, 0, 0, 0.047);
+}
+@media screen and (max-width: 500px) {
+  #about {
+    flex-direction: column;
+  }
 }
 .aboutUs {
   margin-top: 10vw;
@@ -289,7 +315,7 @@ ul li a:hover {
   height: 20vh;
   width: 25vw;
   padding: 33px 23px;
-  background-color: rgba(0, 0, 0, 0.047);
+  background-color: rgba(220, 217, 204, 0.247);
 }
 .plane {
   height: 30px;
@@ -311,46 +337,82 @@ ul li a:hover {
   gap: 1vw;
   margin-right: 45px;
 }
-.imageContainer img {
-  height: 65vh;
+.container {
   width: 19vw;
-  border-radius: 10px;
+  height: 64vh;
+}
+.container img {
+  width: 19vw;
+  height: 64vh;
+  border-radius: 15px;
+  flex-direction: row;
+}
+.container .back {
+  background-color: rgba(220, 217, 204, 0.617);
+}
+.image {
+  height: 55vh;
+  width: 17vw;
 }
 .place {
   width: 19vw;
   height: 65vh;
-  overflow: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 1s;
 }
-
-.containerSlide {
-  display: flex;
-  position: relative;
-}
-.containerSlide img {
-  height: 65vh;
-  width: 19vw;
-  border-radius: 15px;
-}
-@keyframes resetAnimation {
-  0% {
-    transform: translateX(0);
-  }
-  33.33% {
-    transform: translateX(-19vw);
-  }
-  66.66% {
-    transform: translateX(-39vw);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-.place:hover .containerSlide img {
-  animation: resetAnimation 3s;
-}
-
 .top {
-  margin-top: 15px;
+  margin-top: 13px;
+}
+.lieu img {
+  width: 13px;
+  height: 13px;
+}
+.lieu {
+  display: flex;
+  flex-direction: row;
+}
+.front,
+.back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+.back {
+  transform: rotateY(-180deg);
+  border-radius: 15px;
+  border: 1px solid rgb(188, 162, 127);
+}
+.lieu {
+  flex-direction: row;
+  margin-left: 4vw;
+  gap: 2px;
+}
+.back p {
+  margin-left: 1vw;
+  margin-top: 2vw;
+}
+.back img {
+  height: 25px;
+  width: 25px;
+  margin-top: 2.3vh;
+}
+.price {
+  padding-left: 3vw;
+  color: rgba(0, 0, 71, 0.815);
+}
+.booking {
+  height: 5vh;
+  cursor: pointer;
+  margin-left: 5vw;
+  margin-top: 3vh;
+  width: 7vw;
+  color: rgba(0, 0, 71, 0.815);
+}
+.container:hover .place {
+  transform: rotateY(-180deg);
 }
 .featuredPlace h1 {
   margin-top: 15px;
@@ -358,7 +420,7 @@ ul li a:hover {
   color: rgba(0, 0, 71, 0.815);
 }
 .option {
-  margin-top: 20px;
+  margin-top: 3vw;
 }
 .option p,
 .post p {
@@ -377,13 +439,18 @@ ul li a:hover {
   height: 25px;
   align-items: center;
 }
+@media screen and (max-width: 500px) {
+  .imageContainer {
+    flex-direction: column;
+  }
+}
 #journal {
   display: flex;
   flex-direction: column;
   z-index: -2;
   position: relative;
   gap: 2vw;
-  height: 100vh;
+  height: 110vh;
   background-color: rgba(0, 0, 0, 0.047);
 }
 .message {
@@ -424,4 +491,57 @@ ul li a:hover {
 }
 .post {
   margin-left: 47vw;
+}
+#footer {
+  background-color: #030521;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+}
+.all {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+#footer h1 {
+  color: #fff;
+  margin: 15px 15px;
+}
+.navigation ul {
+  margin: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 1vw;
+}
+.navigation ul a,
+.contact {
+  color: #a2a1b7;
+}
+.partner ul li a {
+  text-decoration: none;
+  padding-left: 20px;
+  color: #a2a1b7;
+}
+.partner ul li {
+  list-style: none;
+}
+footer {
+  color: #a2a1b7;
+}
+.droit {
+  margin: 20px 35vw;
+}
+hr {
+  width: 85%;
+  margin-left: 8vw;
+}
+.reseau img {
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  margin-left: 10px;
+}
+.reseau img:hover {
+  transform: scale(0.8);
 }
